# bri-api

./: .gitignore  Cargo.toml
examples/: auth.rs  check_status.rs  inquiry.rs  transfer.rs
src/: lib.rs
tests/: 10_test_transfer_valid_real_account.md  10_test_transfer_valid_real_account.rs  11_test_transfer_valid_proxy_email.md  11_test_transfer_valid_proxy_email.rs  12_test_transfer_valid_proxy_phone.md  12_test_transfer_valid_proxy_phone.rs  13_test_transfer_missing_mandatory.rs  14_test_transfer_invalid_format.rs  15_test_transfer_invalid_account.rs  16_test_transfer_not_permitted.rs  17_test_transfer_conflict.md  17_test_transfer_conflict.rs  18_test_transfer_suspend.rs  19_test_transfer_invalid_amount.rs  1_test_inquiry_valid_real_account.rs  20_test_transfer_inactive_account.rs  21_test_transfer_dormant_account.rs  22_test_transfer_blocked_account.rs  22_test_transfer_insufficient_funds.rs  23_test_transfer_exceeds_limit.rs  24_test_transfer_unauthorized.rs  25_test_transfer_duplicate_reference.md  25_test_transfer_duplicate_reference.rs  26_test_transfer_timeout.md  26_test_transfer_timeout.rs  27_test_transfer_general_error.rs  28_test_transfer_internal_error.md  28_test_transfer_internal_error.rs  29_test_check_status_valid.rs  2_test_inquiry_valid_proxy_email.rs  30_test_check_status_missing_mandatory.rs  31_test_check_status_invalid_format.md  31_test_check_status_invalid_format.rs  32_test_check_status_internal_error.rs  33_test_check_status_not_found.rs  34_test_check_status_unauthorized.rs  35_test_check_status_timeout.md  35_test_check_status_timeout.rs  (+28 more)
(+30 files in other folders)
