[package]
name = "bri-api"
version = "0.1.0"
edition = "2021"
description = "BRI API client library"
license = "APACHE-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
