[package]
name = "bri-api"
version = "0.1.0"
edition = "2021"
description = "BRI API client library"
license = "APACHE-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
sha2 = "0.10"
base64 = "0.21"
dotenv = "0.15"
rsa = { version = "0.9", features = ["sha2", "pem"] }
rand = "0.8"
hmac = "0.12"

[dev-dependencies]
mockito = "1.2"
